# nano-chat

./: .gitignore  CHALLENGES.md  README.md  RESULTS.md  RESUME_ADDITIONS.txt  pyproject.toml
benchmarks/: eval.py  loss_curves.py  throughput.py
docs/: nanochat-walkthrough.tex
docs/superpowers/plans/: 2026-06-29-nanochat-implementation.md
docs/superpowers/specs/: 2026-06-29-nanochat-design.md
inference/: generate.py  kvcache.py
model/: attention.py  blocks.py  config.py  gpt.py
notebooks/: 01_tokenization.ipynb  01_tokenization.py  02_attention.ipynb  02_attention.py  03_transformer.ipynb  03_transformer.py  04_pretraining.ipynb  04_pretraining.py  05_sft.ipynb  05_sft.py  06_rl.ipynb  06_rl.py  07_inference.ipynb  07_inference.py
pretrain/: data.py  prepare.py  train.py
rl/: reward.py  trainer.py
sft/: data.py  prepare.py  trainer.py  validate.py
tests/: test_attention.py  test_blocks.py  test_config.py  test_gpt.py  test_inference.py  test_kvcache_adapter.py  test_pretrain_data.py  test_reward.py  test_rl_trainer.py  test_sft_data.py  test_sft_trainer.py
