[project]
name = "nanochat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "mlx>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "pretrain", "sft", "rl", "inference", "benchmarks"]
